ThreadFix 1.0 Beta 18
- Added more Burp vulnerabilities
- Fixed JS warnings and changed filter / sort / paginate JS on Scanner Comparison Detail page
- Ran PMD / CodePro / FindBugs and cleared any red flag issues